# liblogr

./: .gitignore  Introduction.md  Makefile.am  ProjectHome.md  README.debian  configure.ac  logr.pc.in
debian/: .gitignore  README.source  changelog  control  copyright  logr-dev.install  logr.lintian-overrides
doc/: .gitignore  Doxyfile.in  Makefile.am
examples/: .gitignore  Makefile.am  apache.c  file.c  logcat.c  man.c  rotate.c  simple.c  threads.c
man/: .gitignore  Makefile.am  logr.7.in
src/: Makefile.am  logr.c  logr.h
src/win32/: pthread.h  syslog.h
